<resources>
    <string name="app_name">+Tempo</string>
    <string name="googleMapsKey">AIzaSyDD64ChVEYMLcV7lwnkaXhhcx_u_5Uu1Go</string>
    <string name="Login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Senha">Senha</string>
    <string name="Relembrar">Lembre-se de mim</string>
    <string name="Conectar">Conectar</string>
    <string name="ConectarGoogle">Conectar com o Google</string>
    <string name="Apresentacao">
        Bem vindo ao +Tempo \n
        Aqui você poder ver em tempo real
        como as filas estão nos mercados e
        suas availiações feitas pelos os
        próprios consumidores e
        você também poderá ajudar
    </string>
    <string name="DescricaoImagemLocal">Icone do Local</string>
    <string name="Locais">Locais</string>
    <string name="Favoritos">Favoritos</string>
    <string name="Configuracoes">Perfil</string>
    <string name="Pesquisa">Procurar</string>
    <string name="Favoritar">Favoritar</string>
    <string name="Fila">Fila do caixa</string>
    <string name="Availiacao">Avaliação Local</string>
    <string name="FilaMomento">Toque aqui para avaliar a fila</string>
    <string name="PicoFila">Pico da Fila</string>
    <string name="ComoSeSentem">Como as pessoas se sentem</string>
    <string name="VerTodos">Ver Todos</string>
    <string name="RostoTriste">Rosto Triste</string>
    <string name="RostoFeliz">Rosto Feliz</string>
    <string name="ToqueAvaliar">Toque para avaliar</string>
    <string name="DigiteAvaliacao">Digite a sua Avaliacao</string>
    <string name="OrdenarListaNomesPrompt">Ordenar</string>
    <string-array name="OrdenarListaNomes">
        <item>A a Z</item>
        <item>Z a A</item>
        <item>Mais bem avaliados</item>
        <item>Menos bem avaliados</item>
    </string-array>
    <string name="Titulo">Titulo</string>
    <string name="Enviar">Enviar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="EstouAcordo">Estou de acordo</string>
    <string name="FotoPerfil">Foto perfil</string>
    <string name="RaioPesquisa">Raio pesquisa</string>
    <string name="SeusPontos">Seus Pontos</string>
    <string name="Cadsatro">Cadastro</string>
    <string name="AvaliacaoFila">Avaliação Fila</string>
    <string name="AvaliacaoLocal">Availiação Local</string>
    <string name="Total">Total</string>
    <string name="Feedback">Feedback</string>
    <string name="FotoPerfilRanking">Foto Perfil Ranking</string>
    <string name="Nome">Nome</string>
    <string name="Email">E-mail</string>
    <string name="Data">Data de Nascimento</string>
    <string name="CriarConta">Criar Conta</string>
    <string name="Concordar">Concordo</string>
    <string name="CriarUsuario">Crie a usa conta</string>
    <string name="DataNascimento">Data de nascimento</string>
    <string name="VisualizarTermos">Clique aqui para visualizar os termos</string>
    <string name="Atencao">Atenção</string>
    <string name="Aguarde">Aguarde um instante criando conta</string>
    <string name="Camera">Camera</string>
    <string name="Galeria">Galeria</string>
    <string name="Arquivos">Arquivos</string>
    <string name="Escolha">Aonde deseja buscar a foto ?</string>
    <string name="ErroNome">Por favor colocar seu nome</string>
    <string name="ErroEmail">E-mail está fora do padrão</string>
    <string name="ErroSenha">Por favor verifique a senha digitada</string>
    <string name="DataTexto">Data</string>
    <string name="ErroCriar">Não foi possivel criar a conta</string>
    <string name="CriandoConta">Criando conta</string>
    <string name="ExceptionSenhaFraca">Senha muito fraca</string>
    <string name="ExceptionContaExistente">Conta já existente</string>
    <string name="ExceptionEmailIncorrecto">E-mail fora do padrão</string>
    <string name="SenhaIncorreta">Senha incorreta</string>
    <string name="ContaNaoExistente">Esta conta não existe</string>
    <string name="AddImagem">Adicionar Imagem</string>
    <string name="IrApresentacao">Apresentação</string>
    <string name="IrNovoUsuario">Criar Usuário</string>
    <string name="TermosDeUso">Termos de uso</string>
    <string name="Concordo">Não, eu concordo</string>
    <string name="Discordo">Sim, eu discordo</string>
    <string name="MensagemTermos">Você tem certeza que não concorda com os nossos termos</string>
    <string-array name="ItensOpcaoFoto">
        <item>Camera</item>
        <item>Galeria</item>
        <item>Arquivos</item>
    </string-array>
    <string name="Avalicoes">Avaliações</string>
    <string name="Endereco">Endereço:</string>
    <string name="Telefone">Telefone:</string>
    <string name="Status">Status:</string>
    <string name="UmKM">1 Km</string>
    <string name="CincoKM">5 Km</string>
    <string name="HorarioHint">Escolha o horario</string>
    <string name="IntervaloFila">Intervalo de</string>
    <string name="ParaFila">para a fila do tipo:</string>
    <string name="Deletar">Deletar</string>
    <string name="ErroPermissaoFoto">Sem permissão não é possivel colocar a foto de perfil</string>
    <string name="ErroPermissao">Permissão negada</string>
    <string name="Permissao">Permissão aceita</string>
    <string name="Enviando">Enviando</string>
    <string name="RatingAlerta">Enviando sua nota de:</string>
    <string name="Mapas">Mapa</string>
    <string name="Conectando">Conectando a conta</string>
    <string name="AguardeConectando">Aguarde</string>
    <string name="CamposVazios">Campo vazio</string>
    <string name="Pontos">pts</string>
    <string name="Salvar">Salvar</string>
    <string name="ApagarConta">Deseja apagar a conta ?</string>
    <string name="Sim">Sim</string>
    <string name="Ok">OK</string>
    <string name="Nao">Não</string>
    <string name="Erro">Erro</string>
    <string name="ErroMudancas">Não foi possivel aplicar as mudanças</string>
    <string name="SalvandoAlteracoes">Salvando alterações</string>
    <string name="Aguardando">Aguarde</string>
    <string name="Carregando">Carregando</string>
    <string name="Digite">Digite aqui</string>
    <string name="Rapida">Rápida</string>
    <string name="Normal">Normal</string>
    <string name="Preferencial">Preferêncial</string>
    <string name="MenorQue10">Menor de 10 minutos</string>
    <string name="Entre10e20">Entre 10 a 20 minutos</string>
    <string name="Entre20e30">Entre 10 a 20 minutos</string>
    <string name="Entre30e40">Entre 10 a 20 minutos</string>
    <string name="Entre40e50">Entre 10 a 20 minutos</string>
    <string name="Entre50e60">Entre 10 a 20 minutos</string>
    <string name="Maiorque60">Entre 10 a 20 minutos</string>
    <string name="MudarRaio">Mudar raio de pesquisa</string>
    <string name="CidadeReferencia">Cidade referência</string>
    <string name="TermosDeUtilizacao">Termos de utilização</string>
    <string name="CidadeFaltando">Por favor, colocar a cidade de referência</string>
    <string name="FaltaTermos">Para usar esse aplicativo é necessaário aceitar os termos de utilização</string>
    <string name="ErroCidade">Não existe estabelecimentos cadastrados em sua cidade</string>
    <string name="Aberto">Aberto</string>
    <string name="Fechado">Fechado</string>
    <string name="EnviadoComSucesso">Enviado com sucesso</string>
    <string name="Sucesso">Sucesso</string>
    <string name="ErroAoEnviarRanking">Desculpa, mas não foi possivel enviar sua nota</string>
    <string name="EnviandoNota">Sua nota está sendo enviada</string>
    <string name="ErroEnviar">Não foi possivel enviar</string>
    <string name="Pontinhos">…</string>
    <string name="Ranking">Ranking</string>
    <string name="Mes">Mês</string>
    <string name="Dia">Dia</string>
    <string name="Ano">Ano</string>
    <string name="SemConexao">Sem conexão</string>
    <string name="Conectado">Conectado</string>
    <string name="Indicacao">0 - Rapido 7 - Lento</string>
    <string name="Local">Local</string>
    <string name="CriarLoja">Criar Loja</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="AddLocalMapa">Adicionar via mapa</string>
    <string name="AdicionarLoja">Adicionar Loja</string>
    <string name="Cidade">Cidade</string>
    <string name="HorarioInicio">Horário de abertura</string>
    <string name="HorarioFim">Horário de fechamento</string>
    <string name="Inforaio">Coloque no máximo para leituras sem filtro de km.</string>
    <string name="Infinito">∞</string>
    <string name="VinteCincoKM">25 Km</string>
    <string name="CinquentaKM">50 Km</string>
    <string name="LimparBanco">Limpar banco dia</string>
    <string name="DesabilitarAlarme">Desabilitar alarme</string>
    <string name="HabilitarAlarme">Habilitar alarme</string>
</resources>