<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <Spinner
            android:id="@+id/HorarioFilaAvaliacao"
            android:layout_width="0dp"
            android:layout_height="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:entries="@array/Horarios"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:prompt="@string/HorarioHint"
            android:spinnerMode="dialog"/>

    <RadioGroup
            android:id="@+id/RadioGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/HorarioFilaAvaliacao"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="4dp">
        <RadioButton
                android:text="@string/Rapida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:layout_weight="1"
                android:layout_margin="3dp"/>
        <RadioButton
                android:text="@string/Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:layout_weight="1"
                android:layout_margin="3dp"/>
        <RadioButton
                android:text="@string/Preferencial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3"
                android:layout_weight="1"
                android:layout_margin="3dp"/>
    </RadioGroup>

    <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/BarraFila"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RadioGrupo"
            android:layout_margin="8dp"/>

    <Button
            android:id="@+id/SalvarFila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/BarraFila"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Enviar"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"/>

    <Button
            android:id="@+id/CancelarFila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SalvarFila"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Cancelar"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>