<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16sp"
        android:background="@drawable/bordas_dialog">

    <TextView
            android:id="@+id/UmKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UmKM"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/CincoKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CincoKM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <SeekBar
            android:id="@+id/ValorMudarRaio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/UmKm"
            app:layout_constraintEnd_toStartOf="@id/CincoKm"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:max="500"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Inforaio"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ValorMudarRaio"/>

</androidx.constraintlayout.widget.ConstraintLayout>