<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/AddImagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AddImagemLoja"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="82dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/FotoNovoLoja"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/FotoPerfil"
                android:scaleType="centerCrop"
                android:background="@drawable/borda_imagem" />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NomeInputLayoutLoja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/FotoNovoLoja"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <EditText
                    android:id="@+id/NomeNovoLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Nome"
                    android:inputType="textPersonName"
                    android:autofillHints="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LocalInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/NomeInputLayoutLoja"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <EditText
                    android:id="@+id/LocalNovoLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Local"
                    android:inputType="textPostalAddress"
                    android:autofillHints="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TelefoneInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/CidadeInputLayoutLoja"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <EditText
                    android:id="@+id/TelefoneNovoLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Telefone"
                    android:inputType="number"
                    android:autofillHints="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LatitudeInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TelefoneInputLayout"
                app:layout_constraintEnd_toStartOf="@id/LongitudeInputLayout">

            <EditText
                    android:id="@+id/LatitudeLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Latitude"
                    android:inputType="date"
                    android:autofillHints="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LongitudeInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toEndOf="@id/LatitudeInputLayout"
                app:layout_constraintTop_toBottomOf="@id/TelefoneInputLayout"
                app:layout_constraintEnd_toEndOf="parent">

            <EditText
                    android:id="@+id/LongitudeLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Longitude"
                    android:inputType="date"
                    android:autofillHints="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/AbrirMapaLoja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/add_location_dark_gray"
                android:drawableStart="@drawable/add_location_dark_gray"
                android:text="@string/AddLocalMapa"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/LongitudeInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CidadeInputLayoutLoja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LocalInputLayout"
                app:layout_constraintEnd_toEndOf="parent">

            <EditText
                    android:id="@+id/CidadeReferenciaLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Cidade"
                    android:inputType="text"
                    android:autofillHints="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/HorarioInicioInputLayoutLoja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AbrirMapaLoja"
                app:layout_constraintEnd_toStartOf="@id/HorarioFimInputLayoutLoja">

            <EditText
                    android:id="@+id/HorarioInicioLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/HorarioInicio"
                    android:inputType="text"
                    android:autofillHints="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/HorarioFimInputLayoutLoja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toEndOf="@id/HorarioInicioInputLayoutLoja"
                app:layout_constraintTop_toBottomOf="@id/AbrirMapaLoja"
                app:layout_constraintEnd_toEndOf="parent">

            <EditText
                    android:id="@+id/HorarioFimLoja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/HorarioFim"
                    android:inputType="text"
                    android:autofillHints="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:id="@+id/CriarNovaLoja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/HorarioInicioInputLayoutLoja"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/CriarLoja"
                android:textAllCaps="false"
                android:background="@drawable/borda_botao"
                android:textColor="@android:color/white"/>

        <Space
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CriarNovaLoja"
                android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>